<resources>
    <string name="app_name">Hishab</string>
    <string name="amount">Expense Amount</string>
    <string name="note">Remark</string>
    <string name="save">Save</string>

    <string-array name="expense_type">
        <item>Select Expense Type</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Hotel Bill</item>
        <item>Phone Bill</item>
        <item>Transportation</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="logIn">Login</string>

</resources>
