<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner

                android:id="@+id/spnExpenseType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <EditText

            android:inputType="numberDecimal"
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:padding="16dp" />

    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:inputType="text"
            android:id="@+id/etNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note"
            android:padding="16dp"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:textSize="18sp"
                android:padding="10dp"
                android:visibility="gone"
                android:layout_gravity="end"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:text="@string/save"/>

        </LinearLayout>
    </ScrollView>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/ll"
    android:layout_alignParentEnd="true"
    android:layout_marginTop="32dp"
    android:text="@string/save"
    android:textColor="@color/colorWhite"
    android:background="@color/colorPrimary"
    android:onClick="save"
    />

</RelativeLayout>